# mscm

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml
paper/application/: .gitignore  rtg-2300.qmd  run.sh
paper/data/: rtg-2300-apa.rds  rtg-2300-col.tsv  rtg-2300-coords.rds
paper/manuscript/: .gitignore  Makefile  manuscript.tex  plainnat.bst  references.bib
paper/manuscript/figures/: .gitignore
paper/simulation-study/scenario-1/: evaluation.md  evaluation.qmd  run.sh  scenario.qmd
paper/simulation-study/scenario-2/: evaluation.md  evaluation.qmd  scenario.qmd
paper/simulation-study/scenario-3/: .gitignore  evaluation.md  evaluation.qmd  rtg-2300-col-df.rds  run.sh  scenario.qmd
src/mscm/: __init__.py  distributions.py  goose.py  model.py  simulation.py
tests/: test_distributions.py  test_model.py
